# assistbot-ng

./: .gitignore  Cargo.toml  LICENSE  README.md
assistbot-ng/: Cargo.toml
assistbot-ng/src/: commands.rs  main.rs  settings.rs
assistbot-ng/src/commands/: message.rs  mod.rs  slash.rs
assistbot-ng/src/commands/message/: mod.rs  run.rs
assistbot-ng/src/commands/shared/: dicebear.rs  mod.rs
assistbot-ng/src/commands/slash/: ask.rs  delete_me.rs  dice.rs  dicebear.rs  enum_list.rs  hello.rs  imagine.rs  thanks.rs  useless_facts.rs
assistbot-ng/src/commands/util/: common.rs  message.rs  slash.rs
cmd-args/: Cargo.toml
cmd-args-ext/: Cargo.toml
cmd-args-ext/src/: lib.rs
cmd-args/src/: lib.rs
src/: main.rs  settings.rs
src/commands/: mod.rs
src/commands/message/: run.rs
src/commands/shared/: dicebear.rs
src/commands/slash/: ask.rs  dicebear.rs  enum_list.rs  hello.rs  imagine.rs  mod.rs  useless_facts.rs
src/commands/util/: common.rs  message.rs  mod.rs  slash.rs
