[package]
name = "assistbot-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
reqwest = "0.12.14"
rquickjs = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
tracing = "0.1.41"
url-builder = "0.1.1"
urlencoding = "2.1.3"
