[package]
name = "assistbot-ng"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
reqwest = "0.12.14"
rquickjs = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
cmd-args = {path = "cmd-args"}
cmd-args-ext = {path = "cmd-args-ext"}
tracing = "0.1.41"
url-builder = "0.1.1"
urlencoding = "2.1.3"
ezwhois-rs = "0.1.4"
dicebear = "0.1.3"
