[package]
name = "assistbot-ng"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
reqwest = "0.12.14"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version="0.12.4", features = ["builder"]}
shuttle-runtime = "0.53.0"
shuttle-serenity = "0.53.0"
cmd-args.workspace=true
cmd-args-ext.workspace=true
tracing = "0.1.41"
url-builder = "0.1.1"
urlencoding = "2.1.3"
ezwhois-rs = "0.1.4"
dicebear = "0.1.3"
regex = "1.11.1"
rand = "0.9.1"
tokio = "1.44.2"
